fix: properly align right aligned images
also updates the image snapshot

--- a/components/Image/style.scss
+++ b/components/Image/style.scss
@@ -154,6 +154,10 @@
       margin-right: 0;
     }
 
+    &-right.img-no-wrap {
+      text-align: right;
+    }
+
     figcaption {
       font-size: 0.93em;
       font-style: italic;
